--- a/1-dars/index2.html
+++ b/1-dars/index2.html
@@ -35,3 +35,15 @@
     </form>
 </body>
 </html>
+
+<i>Italic</i><br>
+<b>Bold</b><br>
+<em>DEmphasized</em><br>
+<strong>Strong</strong><br>
+<small>small</small><br>
+<del>Deleted</del><br>
+<ins>Inserted</ins><br>
+v<sub>f</sub><br>
+a<sup>2</sup><br>
+<mark>Marked</mark><br>
+
